--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,50 +23,45 @@
 
 <body>
     <h1>Jason's Website</h1>
-    <button class="toasty">Click me!</button>
     <img src="images/barraconstruction.gif" />
-    <br />
+    <br>
     Under construction
-    <br />
-    Programming languages: C, PErl, Vb 6.0
-    <br />
+    <br>
+    Programming languages: C, Perl, Vb 6.0
+    <br>
     <img class="book" src="images/perl.jpg" />
     <img class="book" src="images/vb6.gif" />
     <img class="book" src="images/krc.png" />
-    <br />
-    Click below to view or sign my Guestbook!
-    <br />
+    <br>
     <img src="images/bluebar2.gif" />
-    <br />
-    <br />
-    <a href="/guestbook"><img src="images/signguestbook.gif" /></a>
-    <br />
-    <br />
+    <br>
+    <br>
+    <a href="/sign"><img src="images/signguestbook.gif" /></a>
+    <br>
+    <br>
     <img src="images/bluebar2.gif" />
-    <br />
-    <br />
-    <br />
-    <img src="images/viewguestbook.gif" />
-    <br />
+    <br>
+    <br>
+    <br>
+    <a href="/guestbook"><img src="images/viewguestbook.gif" /></a>
+        <br>
     <img src="images/Subzero.gif" />
     <img src="images/fire.gif" />
     <img src="images/Reptile.gif" />
-    <br />
-    <br />
-    You are visitor number <img src="images/counter.gif" />
-    <br />
-    maybe actually put a real guest counter like the old one?
     <br>
-    add TOASTY THAT comes out of bottom right corner after going to guestbook
-    <br />
-    made with <img src="images/frontpag.gif" />
-    <br />
+    <br>
+    You are visitor number
+    <br><img src="images/counter.gif" />
+    <br>
+    <br>
+    <img src="images/frontpag.gif" />
+    <br>
     <img src="images/iexplorer.gif" />
-    <br />
-    add me on icq! >> <img src="images/icq.gif" />
-    <br />
+    <br>
+     <img src="images/icq.gif" />
+    <br>
     <img src="images/y2k.gif" />
-    <marquee behavior="alternate">Howdy and Thank you for visiting!</marquee>
+    <marquee behavior="alternate">Thank you for visiting!</marquee>
 </body>
 
 </html>
