--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my website</title>
-    <script src="public/app.js"></script>
+    <title>Jason's Website</title>
     <style>
         body {
             text-align: center;
-            background-color: black;
-            background-image: url("images/blackwav.gif");
+            background-image: url(images/blackwav.gif), linear-gradient(rgb(0 0 0 / 53%),rgb(0 0 0 / 32%));
+            background-blend-mode: overlay;
             color: rgb(255, 255, 255);
         }
         .book {
@@ -25,14 +24,21 @@
     <h1>Jason's Website</h1>
     <img src="images/barraconstruction.gif" />
     <br>
-    Under construction
+    <h2>Welcome to my website!</h2>
+    <h2>I enjoy playing Nintendo 64</h2>
+    <img src="images/n64.gif" /><br>
+    <img src="images/007.gif" /><br>
+    <h2>I also like these games</h2>
+    <img src="images/box1.gif" /><br>
+    <img src="images/box2.gif" /><br>
     <br>
-    Programming languages: C, Perl, Vb 6.0
+    <h2>I like programming in these languages</h2>
     <br>
     <img class="book" src="images/perl.jpg" />
     <img class="book" src="images/vb6.gif" />
     <img class="book" src="images/krc.png" />
     <br>
+    <h2>Please sign my guestbook below!</h2>
     <img src="images/bluebar2.gif" />
     <br>
     <br>
@@ -42,26 +48,37 @@
     <img src="images/bluebar2.gif" />
     <br>
     <br>
-    <br>
     <a href="/guestbook"><img src="images/viewguestbook.gif" /></a>
-        <br>
+    <br>
+    <br>
+    <img src="images/bluebar2.gif" />
+    <br>
+    <br>
     <img src="images/Subzero.gif" />
     <img src="images/fire.gif" />
     <img src="images/Reptile.gif" />
     <br>
     <br>
     You are visitor number
-    <br><img src="images/counter.gif" />
     <br>
+    <img src="images/counter.gif" />
+    <br>
+    <br>
+    <img src="images/icq.gif" />
     <br>
     <img src="images/frontpag.gif" />
     <br>
     <img src="images/iexplorer.gif" />
     <br>
-     <img src="images/icq.gif" />
+    <img src="images/netscape.gif" />
+    <br>
+     <img src="images/modem.gif" />
     <br>
     <img src="images/y2k.gif" />
-    <marquee behavior="alternate">Thank you for visiting!</marquee>
+    <h2>
+        <marquee behavior="alternate">Thank you for visiting!</marquee>
+    </h2
+    >
 </body>
 
 </html>
