--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
     <img src="images/bluebar2.gif" />
     <br>
     <br>
-    <a href="/sign"><img src="images/signguestbook.gif" /></a>
+    <a  href="/sign"><img src="images/signguestbook.gif" /></a>
     <br>
     <br>
     <img src="images/bluebar2.gif" />
@@ -54,9 +54,9 @@
     <img src="images/bluebar2.gif" />
     <br>
     <br>
-    <img src="images/Subzero.gif" />
+    <img class="toasty" src="images/Subzero.gif" />
     <img src="images/fire.gif" />
-    <img src="images/Reptile.gif" />
+    <img class="toasty" src="images/Reptile.gif" />
     <br>
     <br>
     You are visitor number
@@ -77,8 +77,8 @@
     <img src="images/y2k.gif" />
     <h2>
         <marquee behavior="alternate">Thank you for visiting!</marquee>
-    </h2
-    >
+    </h2>
+    <script src="/main.js"></script>
 </body>
 
 </html>
