--- a/views/guestbook.ejs
+++ b/views/guestbook.ejs
@@ -19,6 +19,8 @@
             color: rgb(255, 255, 255);
         }
         .container {
+            max-width: 610px;
+            min-width: 300px;
             text-align: left;
             margin:auto;
             border: solid 1px blue;
@@ -48,7 +50,7 @@
         .bar {
             max-width: 100%;
         }
-        img {
+        .subzero {
             position: relative;
             z-index: -1
         }
@@ -60,7 +62,7 @@
         <a href="/"><img src="images/back1.gif" /></a>
     </div>
     <h1>Jason's Guestbook</h1>
-    <img src="images/Subzero.gif" />
+    <img class="subzero" src="images/Subzero.gif" />
     <img class="bar" src="images/fire.gif" />
     <img src="images/scorpion.gif" />
     <div class="container">
